# etl-quality-gate

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.elt  README.md  docker-compose.api.yml  docker-compose.elt.yml  pyproject.toml
.github/workflows/: api-tests.yml  elt-pipeline.yml
src/api/: __init__.py  base_client.py  coingecko_client.py
src/db/: __init__.py  db_manager.py
src/models/: __init__.py  error_models.py
src/utils/: __init__.py  data_handler.py
tests/: assertions.py  conftest.py  utils.py
tests/test_api/: test_authentication.py  test_coins_list.py  test_endpoints.py  test_error_responses.py  test_extended_models.py  test_search.py
tests/test_elt/: test_database_crud.py  test_database_errors.py  test_pipeline.py
